--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,8 +8,13 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// // Datatables
+// @import "/datatables.min";
+
 // Select2-bootstrap
 @import "/select2-bootstrap";
+
+
 
 .navbar-laravel {
   background-color: #fff;
