--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2217,6 +2217,13 @@ pre code {
   border: 0;
 }
 
+
+.required{
+
+  font-size: 20px;
+  color:red;
+}
+
 .form-control {
   display: block;
   width: 100%;
@@ -11144,4 +11151,3 @@ a.text-dark:focus {
   -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
-
