--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,7 +4,10 @@
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+ 
 
+   font-weight:bold;
+ }
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -11144,4 +11147,3 @@ a.text-dark:focus {
   -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
-
